# bevy_scrollmat

./: Cargo.toml  README.md
examples/: 3d_shapes.rs  basic.rs
src/: plugin.rs
src/assets/: scrollmat.wgsl
